[gd_scene load_steps=4 format=3 uid="uid://bcrs0e0k3n384"]

[ext_resource type="Script" uid="uid://dl4wvdg7yl452" path="res://Battle/BattleScene.gd" id="1_c0unf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0unf"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o46er"]
bg_color = Color(0.588235, 1, 0, 1)
anti_aliasing = false

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_c0unf")

[node name="PlayerSpawn" type="Sprite2D" parent="."]
position = Vector2(288.125, 320)
scale = Vector2(0.231024, 0.256)

[node name="EnemySpawn" type="Sprite2D" parent="."]
position = Vector2(864, 320)
scale = Vector2(0.208696, 0.228761)
flip_h = true

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 512.0
offset_bottom = 512.0

[node name="CreatureName" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.285714
anchor_top = -0.0535714
anchor_right = 0.625
anchor_bottom = -0.0535714
offset_top = -17.0
offset_right = 40.0
offset_bottom = 6.0
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="ProgressBar" parent="PlayerUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.160714
anchor_top = -0.0178571
anchor_right = 0.254464
anchor_bottom = -0.0111607
offset_left = 24.0
offset_top = -8.0
offset_right = 238.0
offset_bottom = 29.0
theme_override_styles/background = SubResource("StyleBoxFlat_c0unf")
theme_override_styles/fill = SubResource("StyleBoxFlat_o46er")

[node name="MovesPanel" type="VBoxContainer" parent="PlayerUI"]
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.428616
anchor_top = 1.0
anchor_right = 1.20763
anchor_bottom = 1.0
offset_left = -0.0200195
offset_right = 290.98
offset_bottom = 68.0
theme_override_constants/separation = 2

[node name="EnemyUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 512.0

[node name="CreatureName" type="Label" parent="EnemyUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.285714
anchor_top = -0.0535714
anchor_right = 0.285714
anchor_bottom = -0.0535714
offset_top = -17.0
offset_right = 192.0
offset_bottom = 6.0
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="EnemyUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.214286
anchor_top = 0.0535714
anchor_right = 0.321429
anchor_bottom = 0.0535714
offset_top = -39.0
offset_right = 208.0
offset_bottom = 1.0
theme_override_styles/background = SubResource("StyleBoxFlat_c0unf")
theme_override_styles/fill = SubResource("StyleBoxFlat_o46er")
